--- a/PML-Report.html
+++ b/PML-Report.html
@@ -188,6 +188,7 @@ summary {
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
 <p>One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it. In this project, your goal will be to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants. * Culled from Coursera course on Practical Machine Learning</p>
+<p>Link to GitHub: <a href="https://github.com/ThandoNdl/datasciencecoursera/blob/master/PML%20Report.Rmd">https://github.com/ThandoNdl/datasciencecoursera/blob/master/PML%20Report.Rmd</a></p>
 </div>
 <div id="data-preparation" class="section level2">
 <h2>Data Preparation</h2>
